ref: delete useless code and fix horizontal scroll

--- a/sumdu-data-vault-client/app/app.css
+++ b/sumdu-data-vault-client/app/app.css
@@ -131,4 +131,8 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+  html, body {
+    height: 100%;
+    overflow-x: hidden;
+  }
 }
